Update to Version 1.3.2.

--- a/source/web_site/src/styles/index.css
+++ b/source/web_site/src/styles/index.css
@@ -1,9 +1,18 @@
-body {
-  margin: 0;
-  padding: 2rem;
-}
+
 
 html * {
 	font-family: AmazonEmberBold,Helvetica Neue Bold,Helvetica Neue,Helvetica,Arial,sans-serif !important;
-
 }
+
+a:hover {
+  color: #FF9900;
+}
+
+a {
+  color: #E1E4EA;
+}
+
+.bg-dark {
+    background-color: #31465F !important;
+}
+
